Fix header spacing.

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -46,13 +46,13 @@ h2 {
 }
 
 h3 {
-  margin: 1.5*$vertical-block-separation 0 1.25*$vertical-block-separation 0;
+  margin: 1.25*$vertical-block-separation 0 0.25*$vertical-block-separation 0;
   @extend h2;
   font-size: 30px;
 }
 
 h4 {
-  margin: 1.25*$vertical-block-separation 0;
+  margin: $vertical-block-separation 0 0.25*$vertical-block-separation 0;
   @extend h2;
   font-size: 22px;
 }
